# world-cup-qatar-elt-dataform

./: .gcloudignore  CLAUDE.md  README.md  compile-dataform-feature-branch.yaml  compile-dataform-tag-production.yaml  deploy-dag.yaml  pyproject.toml  workflow_settings.yaml
.github/workflows/: compile-dataform-feature-branch.yaml  compile-dataform-tag-production.yaml
scripts/: deploy_dag_config.sh  deploy_dag_folder.sh
tests/: test_dag_validation.py
world_cup_qatar_elt_dataform_dags/config/variables/dev/: variables.json
world_cup_qatar_elt_dataform_dags/dag/: settings.py  world_cup_qatar_elt_dataform_dag.py
